chpt04-immobiliare - docker modications